# groot_teleop_dev

./: .gitignore  README.md  pyproject.toml
docs/: DEVELOPMENT_PLAN.md  USER_TEST_HANDOFF.md  WEEKLY_PLAN.md
docs/spikes/: 00-architecture-and-scaffold.md  01-xr-input-adapter.md  02-unitree-dds-bridge.md  03-review-and-improve.md
envs/: groot_teleop.yaml
groot_teleop/: __init__.py
groot_teleop/backends/groot_mujoco/: INTEGRATION.md
groot_teleop/backends/unitree_dds/: dds_bridge.py  g1_arm_ik.py  joint_layout.py
groot_teleop/common/: frames.py
groot_teleop/input/: base_streamer.py  galaxy_xr_streamer.py  synthetic_streamer.py
groot_teleop/input/bridge/: __init__.py
groot_teleop/replay/: latency.py
scripts/: run_unitree_dds_teleop.py
tests/: test_dds_bridge.py  test_frames.py  test_g1_arm_ik.py  test_galaxy_xr_streamer.py
